Fix calendar z-index

--- a/src/assets/styles/calendar.scss
+++ b/src/assets/styles/calendar.scss
@@ -10,6 +10,7 @@
   border-radius: 0.25rem;
   outline-color: inherit;
   text-shadow: inherit;
+  z-index: 1000 !important;
 }
 
 .calendar .addeventatc:hover {
